--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,155 @@
 {
   
   "name": "admindashboard",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
-    "@mui/x-data-grid": "^5.17.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.1.15",
-    "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+  
+    
+  "@emotion/react": "^11.10.4",
+  
+    
+  "@emotion/styled": "^11.10.4",
+  
+    
+  "@mui/icons-material": "^5.10.9",
+  
+    
+  "@mui/material": "^5.10.9",
+  
+    
+  "@mui/x-data-grid": "^5.17.6",
+  
+    
+  "@testing-library/jest-dom": "^5.16.5",
+  
+    
+  "@testing-library/react": "^13.4.0",
+  
+    
+  "@testing-library/user-event": "^13.5.0",
+  
+    
+  "autoprefixer": "^10.4.22",
+  
+    
+  "axios": "^1.13.2",
+  
+    
+  "postcss": "^8.5.6",
+  
+    
+  "react": "^18.2.0",
+  
+    
+  "react-circular-progressbar": "^2.1.0",
+  
+    
+  "react-dom": "^18.2.0",
+  
+    
+  "react-router-dom": "^6.30.2",
+  
+    
+  "react-scripts": "5.0.1",
+  
+    
+  "react-toastify": "^11.0.5",
+  
+    
+  "recharts": "^2.1.15",
+  
+    
+  "sass": "^1.55.0",
+  
+    
+  "tailwindcss": "^4.1.18",
+  
+    
+  "web-vitals": "^2.1.4"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  
+    
+  "start": "react-scripts start",
+  
+    
+  "predeploy": "npm run build",
+  
+    
+  "deploy": "gh-pages -d build",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   }
 }
